# estudo-poetry

./: pyproject.toml
estudo_poetry/: main.py  mandaEmail.py
